# get_next_char

./: .gitignore  CMakeLists.txt  README.md  getnextchar.c
example/: CMakeLists.txt  README.md  main.c
include/: getnextchar.h
src/: getnextchar.c
